add comment counter on homepage

--- a/src/BlogBundle/BlogBundle/Resources/config/routing.yml
+++ b/src/BlogBundle/BlogBundle/Resources/config/routing.yml
@@ -22,3 +22,10 @@ blog_bundle_blog_show:
     requirements:
         _method:  GET
         id: \d+
+        
+blog_bundle_comment_create:
+    path:  /comment/{blog_id}
+    defaults: { _controller: BlogBundleBlogBundle:Comment:create }
+    requirements:
+        _method:  POST
+        blog_id: \d+
