--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -34,6 +34,8 @@ framework:
     assets: ~
     php_errors:
         log: true
+    translator: { fallbacks: ["%locale%"] }
+    translator: { fallbacks: [en] }
 
 # Twig Configuration
 twig:
@@ -71,3 +73,11 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+    
+# Sonata
+sonata_block:
+    default_contexts: [cms]
+    blocks:
+        # enable the SonataAdminBundle block
+        sonata.admin.block.admin_list:
+            contexts: [admin]
