--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -81,3 +81,8 @@ sonata_block:
         # enable the SonataAdminBundle block
         sonata.admin.block.admin_list:
             contexts: [admin]
+
+imports:
+
+    # for yaml
+    - { resource: "@BlogBundle/BlogBundle/Resources/config/admin.yml" }
